# src/types/authenticationServiceType.ts
@@ -1,0 +1,13 @@
+export interface SignUpRequest {
+  username: string
+  password: string
+  fname: string
+  lname: string
+  tel: string
+  email: string
+}
+
+export interface SignInRequest {
+  username: string
+  password: string
+}
